--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-CLIENT_ID='SECRET'
-CLIENT_SECRET='SECRET'
+CLIENT_ID='YOUR_KEY'
+CLIENT_SECRET='YOUR_KEY'
 REDIRECT_URI='http://localhost:8888/callback'
